you can now deposit money

--- a/app/views/protected/welcome.html.erb
+++ b/app/views/protected/welcome.html.erb
@@ -16,5 +16,6 @@ button {
 <li><a href="http://www.military.com/equipment/weapons	">Black Market</a></li>
 <li><a href="/logout">Logout</a></li>
 </ol>
-<button type="button"><a href='withdraw'>Withdraw</a></button>
+<button type="button"><a href='withdraw'>Withdraw</a></button><br/>
+<button type='button'><a href='deposit'>Deposit</a></button>
 </body>
