Withdraw changes and now new users can be a part of the saving database

--- a/app/views/withdraw/new.html.erb
+++ b/app/views/withdraw/new.html.erb
@@ -5,7 +5,14 @@ Current balance: <%= @user.saving.cash %>
 <button type="submit">Withdraw</button><br />
 </form>
 
+<% if @error.to_i == 1 %>
+<h2 style="color: red;">You don't have enough money!</h2>
+<% elsif @error.to_i == 2 %>
+<h2>Wrong input!</h2>
+<% end %>
+
 <ul>
-<% @user.timetables %>
-<li><% ammount: params[:amount] %></li>
-</ul>
+<% @user.timetables.each do |timetable| %>
+<li>Transaction date: <%= timetable.date %><%= timetable.ammount %></li>
+<% end %>
+</ul>	
